added new photo selector activity